src/test/deca/context/invalid/methods/local_var_conflicts_param.deca
// Description :
//    Variable locale ayant le même nom qu'un paramètre.
//
// Resultats :
//    Erreur contextuelle
//    Ligne <No_de_ligne> : <message d'erreur de votre compilateur>

class A {
    int f(int x) {
        int x = 2;
        return x;
    }
}

{
}

